--- a/ks.cfg
+++ b/ks.cfg
@@ -35,6 +35,7 @@ autopart --type=lvm
 
 # Imposta il target di installazione
 clearpart --all --initlabel
+ignoredisk --drives=sda
 part /boot --asprimary --size=500
 part swap --asprimary --size=2048
 part / --size=1 --grow
