--- a/ks.cfg
+++ b/ks.cfg
@@ -3,11 +3,11 @@
 
 # Imposta la lingua dell'installazione
 lang it_IT.UTF-8
-#text
+text
 
 # Non chiedere conferma
-#skipx
-#eula Accepted
+skipx
+eula Accepted
 #network --device ens192 --bootproto static --ip 172.28.3.111 --netmask 255.255.255.0 --gateway 172.28.3.1 --nameserver 192.168.60.1 --onboot yes --noipv6
 network --onboot yes --bootproto=static --ip=172.28.3.112 --netmask=255.255.255.0 --gateway=172.28.3.1 --nameserver 8.8.8.8,8.8.4.4 --hostname Oracle-8-Template
 # Imposta la tastiera
@@ -38,9 +38,9 @@ autopart --type=lvm
 # Imposta il target di installazione
 clearpart --all --initlabel
 #ignoredisk --drives=sda
-#part /boot --asprimary --size=500
-#part swap --asprimary --size=2048
-#part / --size=1 --grow
+part /boot --asprimary --size=500
+part swap --asprimary --size=2048
+part / --size=1 --grow
 
 # Installazione minimale
 %packages --ignoremissing
@@ -60,15 +60,16 @@ open-vm-tools
 chkconfig ntpd on
 chkconfig sshd on
 chkconfig iptables off
-#echo 'oracle ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/oracle
-#chmod 440 /etc/sudoers.d/oracle
-%end
+echo 'oracle ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/oracle
+chmod 440 /etc/sudoers.d/oracle
+
 # Configura SSH
-#echo 'PasswordAuthentication no' >> /etc/ssh/sshd_config
-#echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
-#systemctl restart sshd
+echo 'PasswordAuthentication no' >> /etc/ssh/sshd_config
+echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
+systemctl restart sshd
 
 # Configurazione di rete (se necessario)
-#echo "GRUB_CMDLINE_LINUX=\"net.ifnames=0 biosdevname=0\"" >> /etc/default/grub
-#grub2-mkconfig -o /boot/grub2/grub.cfg
-#%end
+echo "GRUB_CMDLINE_LINUX=\"net.ifnames=0 biosdevname=0\"" >> /etc/default/grub
+grub2-mkconfig -o /boot/grub2/grub.cfg
+%end
+
