--- a/ks.cfg
+++ b/ks.cfg
@@ -72,4 +72,5 @@ systemctl restart sshd
 echo "GRUB_CMDLINE_LINUX=\"net.ifnames=0 biosdevname=0\"" >> /etc/default/grub
 grub2-mkconfig -o /boot/grub2/grub.cfg
 %end
+reboot --eject
 
