--- a/ks.cfg
+++ b/ks.cfg
@@ -64,7 +64,7 @@ echo 'oracle ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/oracle
 chmod 440 /etc/sudoers.d/oracle
 
 # Configura SSH
-echo 'PasswordAuthentication no' >> /etc/ssh/sshd_config
+echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
 systemctl restart sshd
 
