--- a/ks.cfg
+++ b/ks.cfg
@@ -36,7 +36,7 @@ bootloader --location=mbr --append="crashkernel=auto rhgb quiet" --password=$6$r
 # NOTA: Questo è solo un esempio. Modifica in base alle tue esigenze
 
 # Imposta il target di installazione
-clearpart --all --initlabel
+#clearpart --all --initlabel
 #ignoredisk --drives=sda
 part /boot --asprimary --size=500
 part swap --asprimary --size=2048
