--- a/ks.cfg
+++ b/ks.cfg
@@ -7,7 +7,7 @@ text
 
 # Non chiedere conferma
 skipx
-eula Accepted
+#eula Accepted
 #network --device ens192 --bootproto static --ip 172.28.3.111 --netmask 255.255.255.0 --gateway 172.28.3.1 --nameserver 192.168.60.1 --onboot yes --noipv6
 network --onboot yes --bootproto=static --ip=172.28.3.112 --netmask=255.255.255.0 --gateway=172.28.3.1 --nameserver 8.8.8.8,8.8.4.4 --hostname Oracle-8-Template
 # Imposta la tastiera
